tests/fail/XORassign.java
package fail;

import java.lang.System;

public class XORassign {
    public static void main(String[] args) {
        System.out.println('a' ^= 3);
        System.out.println("Hello!" ^= 5);
        System.out.println(2 ^= 'a');
    }
}
